--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
-    "postinstall": "(cd client && npm install && npm install --dev); (cd server && npm install)",
-    "heroku-prebuild": "npm install --dev"
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "Daniel Lago",
