--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
+
 {
   "name": "googlebooks-app",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
- 
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
@@ -11,13 +11,9 @@
     "build": "cd client && npm run build"
   },
   "keywords": [],
-  "author": "Daniel Lago",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
-  },
-  "dependencies": {
-    "apollo-client": "^2.6.10",
-    "graphql": "^15.5.2"
   }
 }
